# Rss2Telegram

./: .env.example  .gitignore  README.md  Subscriptions.opml  feed_routes.yaml  pyproject.toml  rss2telegram.db  rss2telegram.py
.github/workflows/: cron.yml
